--- a/Slash_Android/app/build.gradle
+++ b/Slash_Android/app/build.gradle
@@ -47,7 +47,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
@@ -63,4 +63,5 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation 'io.coil-kt:coil-compose:2.4.0'
 }
