--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 attrs==21.2.0
+aiohttp
+asyncio
 beautifulsoup4==4.10.0
 brotlipy==0.7.0
 CacheControl==0.13.1
@@ -26,7 +28,7 @@ MarkupSafe==2.0.1
 more-itertools==8.8.0
 msgpack==1.0.7
 numpy==1.26.0
-oauth2client==3.0.0
+oauth2client
 oauthlib==3.2.2
 packaging==21.0
 pandas==2.1.1
@@ -37,19 +39,19 @@ py==1.10.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.20
-pycryptodome==3.4.3
+pycryptodome
 PyJWT==2.8.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
-Pyrebase==3.0.27
+Pyrebase
 PySocks==1.7.1
 pytest==6.2.4
 python-dateutil==2.8.2
 python-jwt==2.0.1
 pytz==2023.3.post1
-requests==2.31.0
-requests-oauthlib==1.3.0
-requests-toolbelt==0.7.0
+requests
+requests-oauthlib
+requests-toolbelt
 rsa==4.9
 six==1.16.0
 soupsieve==2.2.1
