--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ pycryptodome
 PyJWT==2.8.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
-Pyrebase
+Pyrebase4
 PySocks==1.7.1
 pytest==6.2.4
 python-dateutil==2.8.2
