--- a/Slash_Android/app/build.gradle
+++ b/Slash_Android/app/build.gradle
@@ -69,8 +69,10 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
     implementation 'io.coil-kt:coil-compose:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
     implementation("com.google.firebase:firebase-auth-ktx")
     implementation "androidx.navigation:navigation-compose:2.7.4"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "androidx.compose.material:material-icons-extended:1.5.3"
 }
