--- a/Slash_Android/app/src/main/AndroidManifest.xml
+++ b/Slash_Android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         <activity
             android:name=".AuthenticationActivity"
             android:exported="true"
-            android:label="@string/title_activity_authentication"
             android:theme="@style/Theme.Slash_Android">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,13 +27,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Slash_Android">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:theme="@style/Theme.Slash_Android"
+            android:exported="true">
         </activity>
     </application>
 
