--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask==1.1.2
 grpcio==1.59.0
 grpcio-status==1.59.0
 gunicorn==20.1.0
+httpx
 httplib2==0.22.0
 idna==3.2
 importlib-metadata==4.6.4
