--- a/Slash_Android/app/build.gradle
+++ b/Slash_Android/app/build.gradle
@@ -72,7 +72,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
     implementation("com.google.firebase:firebase-auth-ktx")
+    implementation("com.google.firebase:firebase-database-ktx")
     implementation "androidx.navigation:navigation-compose:2.7.4"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation "androidx.compose.material:material-icons-extended:1.5.3"
+//    implementation 'com.github.MhmoudAlim:Compose-Ratingbar-library:x.y.z'
 }
