--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -19,9 +19,10 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install pytest
           pip install pytest-cov
+          pip install pytest-flask
           echo $PWD
           export PYTHONPATH=$PWD
-          pytest --cov=.
+          python -m pytest --cov=.
 
     
       - name: Upload coverage reports to Codecov
